updated frontend templates

--- a/frontend/templates/home/django-material-kit/index.html
+++ b/frontend/templates/home/django-material-kit/index.html
@@ -101,7 +101,7 @@
                 <div class="front front-background" style="background-image: url(https://images.unsplash.com/photo-1596466561931-5537af89759f?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=987&q=80); background-size: cover;">
                   <div class="card-body py-7 text-center">
                       <img src="{% static 'assets/img/logo-medna-light.png' %}" class="w-10 mx-auto mt-3" alt="main_logo">
-                    <h3 class="text-white">Maine <br /> Environmental DNA</h3>
+                    <h3 class="text-white">Maine-eDNA</h3>
                     <p class="text-white opacity-8">A state-wide, multi-institutional initiative establishing Maine as a
                       national leader in environmental monitoring, ecological understanding and sustainability of coastal
                       ecosystems through research, education, and outreach.</p>
@@ -135,7 +135,7 @@
                 <div class="info">
                   <i class="fa fa-dna text-gradient text-primary text-3xl"></i>
                   <h5 class="font-weight-bolder mt-3">What is eDNA?</h5>
-                  <p class="pe-3">eDNA is the genetic material left behind by organisms in their environments as a
+                  <p class="pe-3">Environmental DNA is the genetic material left behind by organisms in their environments as a
                     byproduct of their natural life and death processes. </p>
                 </div>
               </div>
