updated frontend templates

--- a/frontend/templates/home/django-material-kit/index.html
+++ b/frontend/templates/home/django-material-kit/index.html
@@ -314,7 +314,7 @@
               <h4 class="text-white">Built for eDNA</h4>
               <h1 class="text-white">Deployment Documentation</h1>
               <p class="lead text-white opacity-8">Technical documentation and guidance on deploying Maine-eDNA metadata.</p>
-              <a href="https://medna-metadata.readthedocs.io/en/latest/?badge=latest" class="text-white icon-move-right">
+              <a href="https://medna-metadata.readthedocs.io/en/latest/?badge=latest" target="_blank" class="text-white icon-move-right">
                 Read docs
                 <i class="fas fa-arrow-right text-sm ms-1"></i>
               </a>
@@ -329,9 +329,9 @@
           <div class="info-horizontal bg-gradient-primary border-radius-xl d-block d-md-flex p-4">
             <i class="material-icons text-white text-3xl">flag</i>
             <div class="ps-0 ps-md-3 mt-3 mt-md-0">
-              <h5 class="text-white">Getting Started</h5>
-              <p class="text-white">Check the possible ways of working with our product and the necessary files for building your own project.</p>
-              <a href="https://www.creative-tim.com/learning-lab/bootstrap/overview/material-kit" class="text-white icon-move-right">
+              <h5 class="text-white">Django Web Framework</h5>
+              <p class="text-white">Start with Django's documentation for a more comprehensive understanding of this project development.</p>
+              <a href="https://www.creative-tim.com/learning-lab/bootstrap/overview/material-kit" target="_blank" class="text-white icon-move-right">
                 Let's start
                 <i class="fas fa-arrow-right text-sm ms-1"></i>
               </a>
@@ -342,9 +342,9 @@
           <div class="info-horizontal bg-gray-100 border-radius-xl d-block d-md-flex p-4 h-100">
             <i class="material-icons text-gradient text-primary text-3xl">precision_manufacturing</i>
             <div class="ps-0 ps-md-3 mt-3 mt-md-0">
-              <h5>Plugins</h5>
-              <p>Get inspiration and have an overview about the plugins that we used to create the Material Kit.</p>
-              <a href="https://www.creative-tim.com/learning-lab/bootstrap/datepicker/material-kit" class="text-primary icon-move-right">
+              <h5>Django REST Framework</h5>
+              <p>Check out REST documentation to gain insight on the development of this project's Application Programming Interface (API).</p>
+              <a href="https://www.django-rest-framework.org/tutorial/quickstart/" target="_blank" class="text-primary icon-move-right">
                 Read more
                 <i class="fas fa-arrow-right text-sm ms-1"></i>
               </a>
@@ -355,9 +355,9 @@
           <div class="info-horizontal bg-gray-100 border-radius-xl d-block d-md-flex p-4">
             <i class="material-icons text-gradient text-primary text-3xl">receipt_long</i>
             <div class="ps-0 ps-md-3 mt-3 mt-md-0">
-              <h5>Utility Classes</h5>
-              <p>Material Kit is giving you a lot of pre-made elements. For those who want flexibility, we included many utility classes.</p>
-              <a href="https://www.creative-tim.com/learning-lab/bootstrap/utilities/material-kit" class="text-primary icon-move-right">
+              <h5>Django Material Kit</h5>
+              <p>An overview with examples on the open source frontend templates used for this project.</p>
+              <a href="https://www.creative-tim.com/learning-lab/bootstrap/overview/material-kit" target="_blank" class="text-primary icon-move-right">
                 Read more
                 <i class="fas fa-arrow-right text-sm ms-1"></i>
               </a>
@@ -390,22 +390,26 @@
               <div class="row justify-content-center">
                 <div class="col-lg-2 col-4">
                   <a href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=1849227" target="_blank">
-                    <img src="{% static 'assets/img/logos/logo-nsf.png' %}" class="img-fluid" data-bs-toggle="tooltip" data-bs-placement="bottom" title="The National Science Foundation award #OIA-1849227">
+                    <img src="{% static 'assets/img/logos/logo-nsf.png' %}" class="img-fluid" data-bs-toggle="tooltip"
+                         data-bs-placement="bottom" title="The National Science Foundation award #OIA-1849227">
                   </a>
                 </div>
                 <div class="col-lg-2 col-4">
-                  <a href="https://umaine.edu/epscor/">
-                    <img src="{% static 'assets/img/logos/logo-maine-epscor.jpg' %}" class="img-fluid" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Maine's Established Program to Stimulate Competitive Research (EPSCoR)">
+                  <a href="https://umaine.edu/epscor/" target="_blank">
+                    <img src="{% static 'assets/img/logos/logo-maine-epscor.jpg' %}" class="img-fluid"
+                         data-bs-toggle="tooltip" data-bs-placement="bottom" title="Maine's Established Program to Stimulate Competitive Research (EPSCoR)">
                   </a>
                 </div>
                 <div class="col-lg-2 col-4">
-                  <a href="https://umaine.edu/edna/">
-                    <img src="{% static 'assets/img/logos/logo-medna-regular-lg.png' %}" class="img-fluid" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Maine-eDNA - Sustaining Coastal Ecosystems in Maine and Beyond">
+                  <a href="https://umaine.edu/edna/" target="_blank">
+                    <img src="{% static 'assets/img/logos/logo-medna-regular-lg.png' %}" class="img-fluid" data-bs-toggle="tooltip"
+                         data-bs-placement="bottom" title="Maine-eDNA - Sustaining Coastal Ecosystems in Maine and Beyond">
                   </a>
                 </div>
                 <div class="col-lg-2 col-4">
-                  <a href="https://umaine.edu/">
-                    <img src="{% static 'assets/img/logos/logo-umaine-crest-4c.png' %}" class="img-fluid" data-bs-toggle="tooltip" data-bs-placement="bottom" title="The University of Maine">
+                  <a href="https://umaine.edu/" target="_blank">
+                    <img src="{% static 'assets/img/logos/logo-umaine-crest-4c.png' %}" class="img-fluid" data-bs-toggle="tooltip"
+                         data-bs-placement="bottom" title="The University of Maine">
                   </a>
                 </div>
               </div>
