updated frontend templates

--- a/frontend/templates/home/django-material-kit/index.html
+++ b/frontend/templates/home/django-material-kit/index.html
@@ -327,10 +327,10 @@
       <div class="row">
         <div class="col-lg-4">
           <div class="info-horizontal bg-gradient-primary border-radius-xl d-block d-md-flex p-4">
-            <i class="material-icons text-white text-3xl">flag</i>
+            <i class="material-icons text-white text-3xl">code</i>
             <div class="ps-0 ps-md-3 mt-3 mt-md-0">
               <h5 class="text-white">Django Web Framework</h5>
-              <p class="text-white">Start with Django's documentation for a more comprehensive understanding of this project development.</p>
+              <p class="text-white">Start with Django's documentation for a more comprehensive understanding of this project's development.</p>
               <a href="https://www.creative-tim.com/learning-lab/bootstrap/overview/material-kit" target="_blank" class="text-white icon-move-right">
                 Let's start
                 <i class="fas fa-arrow-right text-sm ms-1"></i>
@@ -340,7 +340,7 @@
         </div>
         <div class="col-lg-4 px-lg-1 mt-lg-0 mt-4">
           <div class="info-horizontal bg-gray-100 border-radius-xl d-block d-md-flex p-4 h-100">
-            <i class="material-icons text-gradient text-primary text-3xl">precision_manufacturing</i>
+            <i class="material-icons text-gradient text-primary text-3xl">api</i>
             <div class="ps-0 ps-md-3 mt-3 mt-md-0">
               <h5>Django REST Framework</h5>
               <p>Check out REST documentation to gain insight on the development of this project's Application Programming Interface (API).</p>
@@ -353,7 +353,7 @@
         </div>
         <div class="col-lg-4 mt-lg-0 mt-4">
           <div class="info-horizontal bg-gray-100 border-radius-xl d-block d-md-flex p-4">
-            <i class="material-icons text-gradient text-primary text-3xl">receipt_long</i>
+            <i class="material-icons text-gradient text-primary text-3xl">web</i>
             <div class="ps-0 ps-md-3 mt-3 mt-md-0">
               <h5>Django Material Kit</h5>
               <p>An overview with examples on the open source frontend templates used for this project.</p>
