updated frontend templates

--- a/frontend/templates/home/django-material-kit/index.html
+++ b/frontend/templates/home/django-material-kit/index.html
@@ -423,11 +423,13 @@
       <div class="container">
         <div class="row">
           <div class="col-md-7 col-12 my-auto">
-            <h3 class="text-gradient text-primary mb-0">You liked it and</h3>
-            <h3>Want more?</h3>
+            <h3 class="text-gradient text-primary mb-0">Maine-eDNA Metadata</h3>
+            <h3>Dashboard</h3>
             <p class="pe-md-5 mb-4">
-              Most complex and innovative Design System Made by <a href="https://bit.ly/3fKQZaL" target="_blank">Creative Tim </a> . Check our latest Premium Bootstrap 5 UI Kit.
-              Designed for those who like bold elements and beautiful websites. Made of hundred of elements, designed blocks and fully coded pages, Material Kit is ready to help you create stunning websites and webapps.
+              Practical application and access to tables, forms, and profile information has been developed within the
+              dashboard. The dashboard was developed from the open-source <a href="https://github.com/app-generator/django-material-dashboard" target="_blank">Django Dashboard - Material Design</a>
+              project by <a href="https://demos.creative-tim.com/material-dashboard-django/docs/1.0/getting-started/getting-started-django.html?_ga=2.81958805.2019562679.1645566811-976210366.1645566811" target="_blank">Creative-Tim</a>,
+              who also developed the open-source frontend <a href="https://github.com/app-generator/django-material-kit" target="_blank">Django Material Kit</a>.
             </p>
             <div class="github-buttons">
               <a href="/dashboard/" target="_blank" class="btn bg-gradient-primary mb-5 mb-sm-0">Dashboard</a>
