updated frontend templates

--- a/frontend/templates/home/django-material-kit/index.html
+++ b/frontend/templates/home/django-material-kit/index.html
@@ -426,7 +426,7 @@
             <h3 class="text-gradient text-primary mb-0">Maine-eDNA Metadata</h3>
             <h3>Dashboard</h3>
             <p class="pe-md-5 mb-4">
-              Practical application and access to tables, forms, and profile information has been developed within the
+              Practical application and access to tables, forms, and profile information is located within the
               dashboard. The dashboard was developed from the open-source <a href="https://github.com/app-generator/django-material-dashboard" target="_blank">Django Dashboard - Material Design</a>
               project by <a href="https://demos.creative-tim.com/material-dashboard-django/docs/1.0/getting-started/getting-started-django.html?_ga=2.81958805.2019562679.1645566811-976210366.1645566811" target="_blank">Creative-Tim</a>,
               who also developed the open-source frontend <a href="https://github.com/app-generator/django-material-kit" target="_blank">Django Material Kit</a>.
