updated frontend templates

--- a/frontend/templates/includes/django-material-kit/navigation-transparent.html
+++ b/frontend/templates/includes/django-material-kit/navigation-transparent.html
@@ -93,21 +93,21 @@
                     <a class="dropdown-item py-2 ps-3 border-radius-md" href="/">
                       <div class="w-100 d-flex align-items-center justify-content-between">
                         <div>
-                          <h6 class="dropdown-header text-dark font-weight-bolder d-flex justify-content-cente align-items-center p-0">Navigation</h6>
-                          <span class="text-sm">See all navigations</span>
+                          <h6 class="dropdown-header text-dark font-weight-bolder d-flex justify-content-cente align-items-center p-0">Standard Operating Procedures</h6>
+                          <span class="text-sm">See all SOPs</span>
                         </div>
                         <img src="{% static 'assets/img/shapes/down-arrow.svg' %}" alt="down-arrow" class="arrow">
                       </div>
                     </a>
                     <div class="dropdown-menu mt-0 py-3 px-2 mt-3">
                       <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/ui-navigation-navbars.html">
-                        Navbars
+                        Field Collection
                       </a>
                       <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/ui-navigation-nav-tabs.html">
-                        Nav Tabs
+                        Wet Lab
                       </a>
                       <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/ui-navigation-pagination.html">
-                        Pagination
+                        Bioinformatics
                       </a>
                     </div>
                   </li>
@@ -115,79 +115,22 @@
                     <a class="dropdown-item py-2 ps-3 border-radius-md" href="/">
                       <div class="w-100 d-flex align-items-center justify-content-between">
                         <div>
-                          <h6 class="dropdown-header text-dark font-weight-bolder d-flex justify-content-cente align-items-center p-0">Input Areas</h6>
-                          <span class="text-sm">See all input areas</span>
+                          <h6 class="dropdown-header text-dark font-weight-bolder d-flex justify-content-cente align-items-center p-0">Projects</h6>
+                          <span class="text-sm">See all projects</span>
                         </div>
                         <img src="{% static 'assets/img/shapes/down-arrow.svg' %}" alt="down-arrow" class="arrow">
                       </div>
                     </a>
-                    <div class="dropdown-menu mt-0 py-3 px-2 mt-3">
-                      <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/ui-input-inputs.html">
-                        Inputs
-                      </a>
-                      <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/ui-input-forms.html">
-                        Forms
-                      </a>
-                    </div>
                   </li>
                   <li class="nav-item dropdown dropdown-hover dropdown-subitem">
                     <a class="dropdown-item py-2 ps-3 border-radius-md" href="/">
                       <div class="w-100 d-flex align-items-center justify-content-between">
                         <div>
-                          <h6 class="dropdown-header text-dark font-weight-bolder d-flex justify-content-cente align-items-center p-0">Attention Catchers</h6>
-                          <span class="text-sm">See all examples</span>
+                          <h6 class="dropdown-header text-dark font-weight-bolder d-flex justify-content-cente align-items-center p-0">Publications</h6>
+                          <span class="text-sm">See all pubs</span>
                         </div>
-                        <img src="{% static 'assets/img/shapes/down-arrow.svg' %}" alt="down-arrow" class="arrow">
                       </div>
                     </a>
-                    <div class="dropdown-menu mt-0 py-3 px-2 mt-3">
-                      <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/ui-catchers-alerts.html">
-                        Alerts
-                      </a>
-                      <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/ui-catchers-modals.html">
-                        Modals
-                      </a>
-                      <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/ui-catchers-tooltips-popovers.html">
-                        Tooltips & Popovers
-                      </a>
-                    </div>
-                  </li>
-                  <li class="nav-item dropdown dropdown-hover dropdown-subitem">
-                    <a class="dropdown-item py-2 ps-3 border-radius-md" href="/">
-                      <div class="w-100 d-flex align-items-center justify-content-between">
-                        <div>
-                          <h6 class="dropdown-header text-dark font-weight-bolder d-flex justify-content-cente align-items-center p-0">Elements</h6>
-                          <span class="text-sm">See all elements</span>
-                        </div>
-                        <img src="{% static 'assets/img/shapes/down-arrow.svg' %}" alt="down-arrow" class="arrow">
-                      </div>
-                    </a>
-                    <div class="dropdown-menu mt-0 py-3 px-2 mt-3">
-                      <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/ui-elements-avatars.html">
-                        Avatars
-                      </a>
-                      <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/ui-elements-badges.html">
-                        Badges
-                      </a>
-                      <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/ui-elements-breadcrumbs.html">
-                        Breadcrumbs
-                      </a>
-                      <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/ui-elements-buttons.html">
-                        Buttons
-                      </a>
-                      <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/ui-elements-dropdowns.html">
-                        Dropdowns
-                      </a>
-                      <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/ui-elements-progress-bars.html">
-                        Progress Bars
-                      </a>
-                      <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/ui-elements-toggles.html">
-                        Toggles
-                      </a>
-                      <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/ui-elements-typography.html">
-                        Typography
-                      </a>
-                    </div>
                   </li>
                 </div>
                 <div class="row d-lg-none">
@@ -214,18 +157,18 @@
                       </div>
                       <div class="w-100 d-flex align-items-center justify-content-between">
                         <div>
-                          <h6 class="dropdown-header text-dark font-weight-bolder d-flex justify-content-cente align-items-center p-0">Navigation</h6>
+                          <h6 class="dropdown-header text-dark font-weight-bolder d-flex justify-content-cente align-items-center p-0">Standard Operating Procedures</h6>
                         </div>
                       </div>
                     </div>
                     <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/ui-navigation-navbars.html">
-                      Navbars
+                      Field Collection
                     </a>
                     <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/ui-navigation-nav-tabs.html">
-                      Nav Tabs
+                      Wet Lab
                     </a>
                     <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/ui-navigation-pagination.html">
-                      Pagination
+                      Bioinformatics
                     </a>
                     <div class="d-flex mb-2 mt-3">
                       <div class="icon h-10 me-3 d-flex mt-1">
@@ -233,69 +176,20 @@
                       </div>
                       <div class="w-100 d-flex align-items-center justify-content-between">
                         <div>
-                          <h6 class="dropdown-header text-dark font-weight-bolder d-flex justify-content-cente align-items-center p-0">Input Areas</h6>
+                          <h6 class="dropdown-header text-dark font-weight-bolder d-flex justify-content-cente align-items-center p-0">Projects</h6>
                         </div>
                       </div>
                     </div>
-                    <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/ui-input-inputs.html">
-                      Inputs
-                    </a>
-                    <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/ui-input-forms.html">
-                      Forms
-                    </a>
                     <div class="d-flex mb-2 mt-3">
                       <div class="icon h-10 me-3 d-flex mt-1">
                         <i class="ni ni-notification-70 text-gradient text-primary"></i>
                       </div>
                       <div class="w-100 d-flex align-items-center justify-content-between">
                         <div>
-                          <h6 class="dropdown-header text-dark font-weight-bolder d-flex justify-content-cente align-items-center p-0">Attention Catchers</h6>
+                          <h6 class="dropdown-header text-dark font-weight-bolder d-flex justify-content-cente align-items-center p-0">Publications</h6>
                         </div>
                       </div>
                     </div>
-                    <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/ui-catchers-alerts.html">
-                      Alerts
-                    </a>
-                    <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/ui-catchers-modals.html">
-                      Modals
-                    </a>
-                    <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/ui-catchers-tooltips-popovers.html">
-                      Tooltips & Popovers
-                    </a>
-                    <div class="d-flex mb-2 mt-3">
-                      <div class="icon h-10 me-3 d-flex mt-1">
-                        <i class="ni ni-app text-gradient text-primary"></i>
-                      </div>
-                      <div class="w-100 d-flex align-items-center justify-content-between">
-                        <div>
-                          <h6 class="dropdown-header text-dark font-weight-bolder d-flex justify-content-cente align-items-center p-0">Elements</h6>
-                        </div>
-                      </div>
-                    </div>
-                    <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/ui-elements-avatars.html">
-                      Avatars
-                    </a>
-                    <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/ui-elements-badges.html">
-                      Badges
-                    </a>
-                    <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/ui-elements-breadcrumbs.html">
-                      Breadcrumbs
-                    </a>
-                    <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/ui-elements-buttons.html">
-                      Buttons
-                    </a>
-                    <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/ui-elements-dropdowns.html">
-                      Dropdowns
-                    </a>
-                    <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/ui-elements-progress-bars.html">
-                      Progress Bars
-                    </a>
-                    <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/ui-elements-toggles.html">
-                      Toggles
-                    </a>
-                    <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/ui-elements-typography.html">
-                      Typography
-                    </a>
                   </div>
                 </div>
               </ul>
