updated frontend templates

--- a/frontend/templates/includes/django-material-kit/navigation-transparent.html
+++ b/frontend/templates/includes/django-material-kit/navigation-transparent.html
@@ -112,18 +112,17 @@
                     </div>
                   </li>
                   <li class="nav-item dropdown dropdown-hover dropdown-subitem">
-                    <a class="dropdown-item py-2 ps-3 border-radius-md" href="/">
+                    <a class="dropdown-item py-2 ps-3 border-radius-md" href="/main/projects">
                       <div class="w-100 d-flex align-items-center justify-content-between">
                         <div>
                           <h6 class="dropdown-header text-dark font-weight-bolder d-flex justify-content-cente align-items-center p-0">Projects</h6>
                           <span class="text-sm">See all projects</span>
                         </div>
-                        <img src="{% static 'assets/img/shapes/down-arrow.svg' %}" alt="down-arrow" class="arrow">
                       </div>
                     </a>
                   </li>
                   <li class="nav-item dropdown dropdown-hover dropdown-subitem">
-                    <a class="dropdown-item py-2 ps-3 border-radius-md" href="/">
+                    <a class="dropdown-item py-2 ps-3 border-radius-md" href="/main/publications">
                       <div class="w-100 d-flex align-items-center justify-content-between">
                         <div>
                           <h6 class="dropdown-header text-dark font-weight-bolder d-flex justify-content-cente align-items-center p-0">Publications</h6>
