--- a/frontend/templates/includes/django-material-kit/navigation-transparent.html
+++ b/frontend/templates/includes/django-material-kit/navigation-transparent.html
@@ -71,6 +71,26 @@
               <ul class="dropdown-menu dropdown-menu-animation dropdown-menu-end dropdown-md dropdown-md-responsive p-3 border-radius-lg mt-0 mt-lg-3" aria-labelledby="dropdownMenuBlocks">
                 <div class="d-none d-lg-block">
                   <li class="nav-item dropdown dropdown-hover dropdown-subitem">
+                    <a class="dropdown-item py-2 ps-3 border-radius-md" href="/main/projects">
+                      <div class="w-100 d-flex align-items-center justify-content-between">
+                        <div>
+                          <h6 class="dropdown-header text-dark font-weight-bolder d-flex justify-content-cente align-items-center p-0">Projects</h6>
+                          <span class="text-sm">See all projects</span>
+                        </div>
+                      </div>
+                    </a>
+                  </li>
+                  <li class="nav-item dropdown dropdown-hover dropdown-subitem">
+                    <a class="dropdown-item py-2 ps-3 border-radius-md" href="/main/publications">
+                      <div class="w-100 d-flex align-items-center justify-content-between">
+                        <div>
+                          <h6 class="dropdown-header text-dark font-weight-bolder d-flex justify-content-cente align-items-center p-0">Publications</h6>
+                          <span class="text-sm">See all pubs</span>
+                        </div>
+                      </div>
+                    </a>
+                  </li>
+                  <li class="nav-item dropdown dropdown-hover dropdown-subitem">
                     <a class="dropdown-item py-2 ps-3 border-radius-md" href="/">
                       <div class="w-100 d-flex align-items-center justify-content-between">
                         <div>
@@ -93,47 +113,47 @@
                     <a class="dropdown-item py-2 ps-3 border-radius-md" href="/">
                       <div class="w-100 d-flex align-items-center justify-content-between">
                         <div>
-                          <h6 class="dropdown-header text-dark font-weight-bolder d-flex justify-content-cente align-items-center p-0">Standard Operating Procedures</h6>
-                          <span class="text-sm">See all SOPs</span>
+                          <h6 class="dropdown-header text-dark font-weight-bolder d-flex justify-content-cente align-items-center p-0">SOP Documentation</h6>
+                          <span class="text-sm">See all SOP docs</span>
                         </div>
                         <img src="{% static 'assets/img/shapes/down-arrow.svg' %}" alt="down-arrow" class="arrow">
                       </div>
                     </a>
                     <div class="dropdown-menu mt-0 py-3 px-2 mt-3">
-                      <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/ui-navigation-navbars.html">
+                      <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/sop-field-collection.html">
                         Field Collection
                       </a>
-                      <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/ui-navigation-nav-tabs.html">
+                      <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/sop-wet-lab.html">
                         Wet Lab
                       </a>
-                      <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/ui-navigation-pagination.html">
+                      <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/sop-bioinformatics.html">
                         Bioinformatics
                       </a>
                     </div>
                   </li>
-                  <li class="nav-item dropdown dropdown-hover dropdown-subitem">
-                    <a class="dropdown-item py-2 ps-3 border-radius-md" href="/main/projects">
-                      <div class="w-100 d-flex align-items-center justify-content-between">
-                        <div>
-                          <h6 class="dropdown-header text-dark font-weight-bolder d-flex justify-content-cente align-items-center p-0">Projects</h6>
-                          <span class="text-sm">See all projects</span>
-                        </div>
-                      </div>
-                    </a>
-                  </li>
-                  <li class="nav-item dropdown dropdown-hover dropdown-subitem">
-                    <a class="dropdown-item py-2 ps-3 border-radius-md" href="/main/publications">
-                      <div class="w-100 d-flex align-items-center justify-content-between">
-                        <div>
-                          <h6 class="dropdown-header text-dark font-weight-bolder d-flex justify-content-cente align-items-center p-0">Publications</h6>
-                          <span class="text-sm">See all pubs</span>
-                        </div>
-                      </div>
-                    </a>
-                  </li>
                 </div>
                 <div class="row d-lg-none">
                   <div class="col-md-12">
+                    <div class="d-flex mb-2 mt-3">
+                      <div class="icon h-10 me-3 d-flex mt-1">
+                        <i class="ni ni-badge text-gradient text-primary"></i>
+                      </div>
+                      <div class="w-100 d-flex align-items-center justify-content-between">
+                        <div>
+                          <h6 class="dropdown-header text-dark font-weight-bolder d-flex justify-content-cente align-items-center p-0">Projects</h6>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="d-flex mb-2 mt-3">
+                      <div class="icon h-10 me-3 d-flex mt-1">
+                        <i class="ni ni-notification-70 text-gradient text-primary"></i>
+                      </div>
+                      <div class="w-100 d-flex align-items-center justify-content-between">
+                        <div>
+                          <h6 class="dropdown-header text-dark font-weight-bolder d-flex justify-content-cente align-items-center p-0">Publications</h6>
+                        </div>
+                      </div>
+                    </div>
                     <div class="d-flex mb-2">
                       <div class="icon h-10 me-3 d-flex mt-1">
                         <i class="ni ni-single-copy-04 text-gradient text-primary"></i>
@@ -156,39 +176,19 @@
                       </div>
                       <div class="w-100 d-flex align-items-center justify-content-between">
                         <div>
-                          <h6 class="dropdown-header text-dark font-weight-bolder d-flex justify-content-cente align-items-center p-0">Standard Operating Procedures</h6>
+                          <h6 class="dropdown-header text-dark font-weight-bolder d-flex justify-content-cente align-items-center p-0">SOP Documentation</h6>
                         </div>
                       </div>
                     </div>
-                    <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/ui-navigation-navbars.html">
+                    <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/sop-field-collection.html">
                       Field Collection
                     </a>
-                    <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/ui-navigation-nav-tabs.html">
+                    <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/sop-wet-lab.html">
                       Wet Lab
                     </a>
-                    <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/ui-navigation-pagination.html">
+                    <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/sop-bioinformatics.html">
                       Bioinformatics
                     </a>
-                    <div class="d-flex mb-2 mt-3">
-                      <div class="icon h-10 me-3 d-flex mt-1">
-                        <i class="ni ni-badge text-gradient text-primary"></i>
-                      </div>
-                      <div class="w-100 d-flex align-items-center justify-content-between">
-                        <div>
-                          <h6 class="dropdown-header text-dark font-weight-bolder d-flex justify-content-cente align-items-center p-0">Projects</h6>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="d-flex mb-2 mt-3">
-                      <div class="icon h-10 me-3 d-flex mt-1">
-                        <i class="ni ni-notification-70 text-gradient text-primary"></i>
-                      </div>
-                      <div class="w-100 d-flex align-items-center justify-content-between">
-                        <div>
-                          <h6 class="dropdown-header text-dark font-weight-bolder d-flex justify-content-cente align-items-center p-0">Publications</h6>
-                        </div>
-                      </div>
-                    </div>
                   </div>
                 </div>
               </ul>
