--- a/frontend/templates/includes/django-material-kit/navigation-transparent.html
+++ b/frontend/templates/includes/django-material-kit/navigation-transparent.html
@@ -71,7 +71,7 @@
               <ul class="dropdown-menu dropdown-menu-animation dropdown-menu-end dropdown-md dropdown-md-responsive p-3 border-radius-lg mt-0 mt-lg-3" aria-labelledby="dropdownMenuBlocks">
                 <div class="d-none d-lg-block">
                   <li class="nav-item dropdown dropdown-hover dropdown-subitem">
-                    <a class="dropdown-item py-2 ps-3 border-radius-md" href="/main/projects">
+                    <a class="dropdown-item py-2 ps-3 border-radius-md" href="/main/projects.html">
                       <div class="w-100 d-flex align-items-center justify-content-between">
                         <div>
                           <h6 class="dropdown-header text-dark font-weight-bolder d-flex justify-content-cente align-items-center p-0">Projects</h6>
@@ -81,7 +81,7 @@
                     </a>
                   </li>
                   <li class="nav-item dropdown dropdown-hover dropdown-subitem">
-                    <a class="dropdown-item py-2 ps-3 border-radius-md" href="/main/publications">
+                    <a class="dropdown-item py-2 ps-3 border-radius-md" href="/main/publications.html">
                       <div class="w-100 d-flex align-items-center justify-content-between">
                         <div>
                           <h6 class="dropdown-header text-dark font-weight-bolder d-flex justify-content-cente align-items-center p-0">Publications</h6>
