--- a/frontend/templates/includes/django-material-kit/navigation-transparent.html
+++ b/frontend/templates/includes/django-material-kit/navigation-transparent.html
@@ -85,29 +85,10 @@
                       <div class="w-100 d-flex align-items-center justify-content-between">
                         <div>
                           <h6 class="dropdown-header text-dark font-weight-bolder d-flex justify-content-cente align-items-center p-0">Publications</h6>
-                          <span class="text-sm">See all pubs</span>
+                          <span class="text-sm">See all publications</span>
                         </div>
                       </div>
                     </a>
-                  </li>
-                  <li class="nav-item dropdown dropdown-hover dropdown-subitem">
-                    <a class="dropdown-item py-2 ps-3 border-radius-md" href="/">
-                      <div class="w-100 d-flex align-items-center justify-content-between">
-                        <div>
-                          <h6 class="dropdown-header text-dark font-weight-bolder d-flex justify-content-cente align-items-center p-0">API Documentation</h6>
-                          <span class="text-sm">See all API docs</span>
-                        </div>
-                        <img src="{% static 'assets/img/shapes/down-arrow.svg' %}" alt="down-arrow" class="arrow">
-                      </div>
-                    </a>
-                    <div class="dropdown-menu mt-0 py-3 px-2 mt-3">
-                      <a class="dropdown-item ps-3 border-radius-md mb-1" href="{% url 'schema-swagger-ui' %}">
-                        Swagger
-                      </a>
-                      <a class="dropdown-item ps-3 border-radius-md mb-1" href="{% url 'schema-redoc' %}">
-                        Redoc
-                      </a>
-                    </div>
                   </li>
                   <li class="nav-item dropdown dropdown-hover dropdown-subitem">
                     <a class="dropdown-item py-2 ps-3 border-radius-md" href="/">
@@ -128,6 +109,25 @@
                       </a>
                       <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/sop-bioinformatics.html">
                         Bioinformatics
+                      </a>
+                    </div>
+                  </li>
+                  <li class="nav-item dropdown dropdown-hover dropdown-subitem">
+                    <a class="dropdown-item py-2 ps-3 border-radius-md" href="/">
+                      <div class="w-100 d-flex align-items-center justify-content-between">
+                        <div>
+                          <h6 class="dropdown-header text-dark font-weight-bolder d-flex justify-content-cente align-items-center p-0">API Documentation</h6>
+                          <span class="text-sm">See all API docs</span>
+                        </div>
+                        <img src="{% static 'assets/img/shapes/down-arrow.svg' %}" alt="down-arrow" class="arrow">
+                      </div>
+                    </a>
+                    <div class="dropdown-menu mt-0 py-3 px-2 mt-3">
+                      <a class="dropdown-item ps-3 border-radius-md mb-1" href="{% url 'schema-swagger-ui' %}">
+                        Swagger
+                      </a>
+                      <a class="dropdown-item ps-3 border-radius-md mb-1" href="{% url 'schema-redoc' %}">
+                        Redoc
                       </a>
                     </div>
                   </li>
@@ -154,22 +154,6 @@
                         </div>
                       </div>
                     </div>
-                    <div class="d-flex mb-2">
-                      <div class="icon h-10 me-3 d-flex mt-1">
-                        <i class="ni ni-single-copy-04 text-gradient text-primary"></i>
-                      </div>
-                      <div class="w-100 d-flex align-items-center justify-content-between">
-                        <div>
-                          <h6 class="dropdown-header text-dark font-weight-bolder d-flex justify-content-cente align-items-center p-0">API Documentation</h6>
-                        </div>
-                      </div>
-                    </div>
-                    <a class="dropdown-item ps-3 border-radius-md mb-1" href="{% url 'schema-swagger-ui' %}">
-                      Swagger
-                    </a>
-                    <a class="dropdown-item ps-3 border-radius-md mb-1" href="{% url 'schema-redoc' %}">
-                      Redoc
-                    </a>
                     <div class="d-flex mb-2 mt-3">
                       <div class="icon h-10 me-3 d-flex mt-1">
                         <i class="ni ni-laptop text-gradient text-primary"></i>
@@ -188,6 +172,22 @@
                     </a>
                     <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/sop-bioinformatics.html">
                       Bioinformatics
+                    </a>
+                    <div class="d-flex mb-2">
+                      <div class="icon h-10 me-3 d-flex mt-1">
+                        <i class="ni ni-single-copy-04 text-gradient text-primary"></i>
+                      </div>
+                      <div class="w-100 d-flex align-items-center justify-content-between">
+                        <div>
+                          <h6 class="dropdown-header text-dark font-weight-bolder d-flex justify-content-cente align-items-center p-0">API Documentation</h6>
+                        </div>
+                      </div>
+                    </div>
+                    <a class="dropdown-item ps-3 border-radius-md mb-1" href="{% url 'schema-swagger-ui' %}">
+                      Swagger
+                    </a>
+                    <a class="dropdown-item ps-3 border-radius-md mb-1" href="{% url 'schema-redoc' %}">
+                      Redoc
                     </a>
                   </div>
                 </div>
