--- a/frontend/templates/includes/django-material-kit/navigation.html
+++ b/frontend/templates/includes/django-material-kit/navigation.html
@@ -69,7 +69,27 @@
                   <ul class="dropdown-menu dropdown-menu-end dropdown-menu-animation dropdown-md dropdown-md-responsive p-3 border-radius-lg mt-0 mt-lg-3" aria-labelledby="dropdownMenuBlocks">
                     <div class="d-none d-lg-block">
                       <li class="nav-item dropdown dropdown-hover dropdown-subitem">
-                        <a class="dropdown-item py-2 ps-3 border-radius-md" href="/">
+                        <a class="dropdown-item py-2 ps-3 border-radius-md" href="/main/projects.html">
+                          <div class="w-100 d-flex align-items-center justify-content-between">
+                            <div>
+                              <h6 class="dropdown-header text-dark font-weight-bolder d-flex justify-content-cente align-items-center p-0">Projects</h6>
+                              <span class="text-sm">See all projects</span>
+                            </div>
+                          </div>
+                        </a>
+                      </li>
+                      <li class="nav-item dropdown dropdown-hover dropdown-subitem">
+                        <a class="dropdown-item py-2 ps-3 border-radius-md" href="/main/publications.html">
+                          <div class="w-100 d-flex align-items-center justify-content-between">
+                            <div>
+                              <h6 class="dropdown-header text-dark font-weight-bolder d-flex justify-content-cente align-items-center p-0">Publications</h6>
+                              <span class="text-sm">See all publications</span>
+                            </div>
+                          </div>
+                        </a>
+                      </li>
+                      <li class="nav-item dropdown dropdown-hover dropdown-subitem">
+                        <a class="dropdown-item py-2 ps-3 border-radius-md" href="/main/api.html">
                           <div class="w-100 d-flex align-items-center justify-content-between">
                             <div>
                               <h6 class="dropdown-header text-dark font-weight-bolder d-flex justify-content-cente align-items-center p-0">API Documentation</h6>
@@ -88,108 +108,70 @@
                         </div>
                       </li>
                       <li class="nav-item dropdown dropdown-hover dropdown-subitem">
-                        <a class="dropdown-item py-2 ps-3 border-radius-md" href="/">
+                        <a class="dropdown-item py-2 ps-3 border-radius-md" href="/main/sop.html">
                           <div class="w-100 d-flex align-items-center justify-content-between">
                             <div>
-                              <h6 class="dropdown-header text-dark font-weight-bolder d-flex justify-content-cente align-items-center p-0">Navigation</h6>
-                              <span class="text-sm">See all navigations</span>
+                              <h6 class="dropdown-header text-dark font-weight-bolder d-flex justify-content-cente align-items-center p-0">SOP Documentation</h6>
+                              <span class="text-sm">See all SOP docs</span>
                             </div>
                             <img src="{% static 'assets/img/shapes/down-arrow.svg' %}" alt="down-arrow" class="arrow">
                           </div>
                         </a>
                         <div class="dropdown-menu mt-0 py-3 px-2 mt-3">
-                          <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/ui-navigation-navbars.html">
-                            Navbars
+                          <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/sop-field-collection.html">
+                            Field Collection
                           </a>
-                          <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/ui-navigation-nav-tabs.html">
-                            Nav Tabs
+                          <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/sop-wet-lab.html">
+                            Wet Lab
                           </a>
-                          <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/ui-navigation-pagination.html">
-                            Pagination
-                          </a>
-                        </div>
-                      </li>
-                      <li class="nav-item dropdown dropdown-hover dropdown-subitem">
-                        <a class="dropdown-item py-2 ps-3 border-radius-md" href="/">
-                          <div class="w-100 d-flex align-items-center justify-content-between">
-                            <div>
-                              <h6 class="dropdown-header text-dark font-weight-bolder d-flex justify-content-cente align-items-center p-0">Input Areas</h6>
-                              <span class="text-sm">See all input areas</span>
-                            </div>
-                            <img src="{% static 'assets/img/shapes/down-arrow.svg' %}" alt="down-arrow" class="arrow">
-                          </div>
-                        </a>
-                        <div class="dropdown-menu mt-0 py-3 px-2 mt-3">
-                          <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/ui-input-inputs.html">
-                            Inputs
-                          </a>
-                          <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/ui-input-forms.html">
-                            Forms
+                          <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/sop-bioinformatics.html">
+                            Bioinformatics
                           </a>
                         </div>
                       </li>
-                      <li class="nav-item dropdown dropdown-hover dropdown-subitem">
-                        <a class="dropdown-item py-2 ps-3 border-radius-md" href="/">
-                          <div class="w-100 d-flex align-items-center justify-content-between">
-                            <div>
-                              <h6 class="dropdown-header text-dark font-weight-bolder d-flex justify-content-cente align-items-center p-0">Attention Catchers</h6>
-                              <span class="text-sm">See all examples</span>
-                            </div>
-                            <img src="{% static 'assets/img/shapes/down-arrow.svg' %}" alt="down-arrow" class="arrow">
-                          </div>
-                        </a>
-                        <div class="dropdown-menu mt-0 py-3 px-2 mt-3">
-                          <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/ui-catchers-alerts.html">
-                            Alerts
-                          </a>
-                          <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/ui-catchers-modals.html">
-                            Modals
-                          </a>
-                          <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/ui-catchers-tooltips-popovers.html">
-                            Tooltips & Popovers
-                          </a>
-                        </div>
-                      </li>
-                      <li class="nav-item dropdown dropdown-hover dropdown-subitem">
-                        <a class="dropdown-item py-2 ps-3 border-radius-md" href="/">
-                          <div class="w-100 d-flex align-items-center justify-content-between">
-                            <div>
-                              <h6 class="dropdown-header text-dark font-weight-bolder d-flex justify-content-cente align-items-center p-0">Elements</h6>
-                              <span class="text-sm">See all elements</span>
-                            </div>
-                            <img src="{% static 'assets/img/shapes/down-arrow.svg' %}" alt="down-arrow" class="arrow">
-                          </div>
-                        </a>
-                        <div class="dropdown-menu mt-0 py-3 px-2 mt-3">
-                          <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/ui-elements-avatars.html">
-                            Avatars
-                          </a>
-                          <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/ui-elements-badges.html">
-                            Badges
-                          </a>
-                          <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/ui-elements-breadcrumbs.html">
-                            Breadcrumbs
-                          </a>
-                          <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/ui-elements-buttons.html">
-                            Buttons
-                          </a>
-                          <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/ui-elements-dropdowns.html">
-                            Dropdowns
-                          </a>
-                          <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/ui-elements-progress-bars.html">
-                            Progress Bars
-                          </a>
-                          <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/ui-elements-toggles.html">
-                            Toggles
-                          </a>
-                          <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/ui-elements-typography.html">
-                            Typography
-                          </a>
-                        </div>
-                      </li>
+
                     </div>
                     <div class="row d-lg-none">
                       <div class="col-md-12">
+                        <div class="d-flex mb-2 mt-3">
+                          <div class="icon h-10 me-3 d-flex mt-1">
+                            <i class="ni ni-badge text-gradient text-primary"></i>
+                          </div>
+                          <div class="w-100 d-flex align-items-center justify-content-between">
+                            <div>
+                              <h6 class="dropdown-header text-dark font-weight-bolder d-flex justify-content-cente align-items-center p-0">Projects</h6>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="d-flex mb-2 mt-3">
+                          <div class="icon h-10 me-3 d-flex mt-1">
+                            <i class="ni ni-notification-70 text-gradient text-primary"></i>
+                          </div>
+                          <div class="w-100 d-flex align-items-center justify-content-between">
+                            <div>
+                              <h6 class="dropdown-header text-dark font-weight-bolder d-flex justify-content-cente align-items-center p-0">Publications</h6>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="d-flex mb-2 mt-3">
+                          <div class="icon h-10 me-3 d-flex mt-1">
+                            <i class="ni ni-laptop text-gradient text-primary"></i>
+                          </div>
+                          <div class="w-100 d-flex align-items-center justify-content-between">
+                            <div>
+                              <h6 class="dropdown-header text-dark font-weight-bolder d-flex justify-content-cente align-items-center p-0">SOP Documentation</h6>
+                            </div>
+                          </div>
+                        </div>
+                        <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/sop-field-collection.html">
+                          Field Collection
+                        </a>
+                        <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/sop-wet-lab.html">
+                          Wet Lab
+                        </a>
+                        <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/sop-bioinformatics.html">
+                          Bioinformatics
+                        </a>
                         <div class="d-flex mb-2">
                           <div class="icon h-10 me-3 d-flex mt-1">
                             <i class="ni ni-single-copy-04 text-gradient text-primary"></i>
@@ -205,94 +187,6 @@
                         </a>
                         <a class="dropdown-item ps-3 border-radius-md mb-1" href="{% url 'schema-redoc' %}">
                           Redoc
-                        </a>
-                        <div class="d-flex mb-2 mt-3">
-                          <div class="icon h-10 me-3 d-flex mt-1">
-                            <i class="ni ni-laptop text-gradient text-primary"></i>
-                          </div>
-                          <div class="w-100 d-flex align-items-center justify-content-between">
-                            <div>
-                              <h6 class="dropdown-header text-dark font-weight-bolder d-flex justify-content-cente align-items-center p-0">Navigation</h6>
-                            </div>
-                          </div>
-                        </div>
-                        <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/ui-navigation-navbars.html">
-                          Navbars
-                        </a>
-                        <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/ui-navigation-nav-tabs.html">
-                          Nav Tabs
-                        </a>
-                        <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/ui-navigation-pagination.html">
-                          Pagination
-                        </a>
-                        <div class="d-flex mb-2 mt-3">
-                          <div class="icon h-10 me-3 d-flex mt-1">
-                            <i class="ni ni-badge text-gradient text-primary"></i>
-                          </div>
-                          <div class="w-100 d-flex align-items-center justify-content-between">
-                            <div>
-                              <h6 class="dropdown-header text-dark font-weight-bolder d-flex justify-content-cente align-items-center p-0">Input Areas</h6>
-                            </div>
-                          </div>
-                        </div>
-                        <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/ui-input-inputs.html">
-                          Inputs
-                        </a>
-                        <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/ui-input-forms.html">
-                          Forms
-                        </a>
-                        <div class="d-flex mb-2 mt-3">
-                          <div class="icon h-10 me-3 d-flex mt-1">
-                            <i class="ni ni-notification-70 text-gradient text-primary"></i>
-                          </div>
-                          <div class="w-100 d-flex align-items-center justify-content-between">
-                            <div>
-                              <h6 class="dropdown-header text-dark font-weight-bolder d-flex justify-content-cente align-items-center p-0">Attention Catchers</h6>
-                            </div>
-                          </div>
-                        </div>
-                        <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/ui-catchers-alerts.html">
-                          Alerts
-                        </a>
-                        <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/ui-catchers-modals.html">
-                          Modals
-                        </a>
-                        <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/ui-catchers-tooltips-popovers.html">
-                          Tooltips & Popovers
-                        </a>
-                        <div class="d-flex mb-2 mt-3">
-                          <div class="icon h-10 me-3 d-flex mt-1">
-                            <i class="ni ni-app text-gradient text-primary"></i>
-                          </div>
-                          <div class="w-100 d-flex align-items-center justify-content-between">
-                            <div>
-                              <h6 class="dropdown-header text-dark font-weight-bolder d-flex justify-content-cente align-items-center p-0">Elements</h6>
-                            </div>
-                          </div>
-                        </div>
-                        <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/ui-elements-avatars.html">
-                          Avatars
-                        </a>
-                        <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/ui-elements-badges.html">
-                          Badges
-                        </a>
-                        <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/ui-elements-breadcrumbs.html">
-                          Breadcrumbs
-                        </a>
-                        <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/ui-elements-buttons.html">
-                          Buttons
-                        </a>
-                        <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/ui-elements-dropdowns.html">
-                          Dropdowns
-                        </a>
-                        <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/ui-elements-progress-bars.html">
-                          Progress Bars
-                        </a>
-                        <a class="dropdown-item ps-3 border-radius-md mb-1" href="/ui-elements-toggles.html">
-                          Toggles
-                        </a>
-                        <a class="dropdown-item ps-3 border-radius-md mb-1" href="/ui-elements-typography.html">
-                          Typography
                         </a>
                       </div>
                     </div>
