--- a/frontend/templates/includes/django-material-kit/navigation-light.html
+++ b/frontend/templates/includes/django-material-kit/navigation-light.html
@@ -66,7 +66,49 @@
             <ul class="dropdown-menu dropdown-menu-end dropdown-menu-animation dropdown-md dropdown-md-responsive p-3 border-radius-lg mt-0 mt-lg-3" aria-labelledby="dropdownMenuBlocks">
               <div class="d-none d-lg-block">
                 <li class="nav-item dropdown dropdown-hover dropdown-subitem">
-                  <a class="dropdown-item py-2 ps-3 border-radius-md" href="/">
+                  <a class="dropdown-item py-2 ps-3 border-radius-md" href="/main/projects.html">
+                    <div class="w-100 d-flex align-items-center justify-content-between">
+                      <div>
+                        <h6 class="dropdown-header text-dark font-weight-bolder d-flex justify-content-cente align-items-center p-0">Projects</h6>
+                        <span class="text-sm">See all projects</span>
+                      </div>
+                    </div>
+                  </a>
+                </li>
+                <li class="nav-item dropdown dropdown-hover dropdown-subitem">
+                  <a class="dropdown-item py-2 ps-3 border-radius-md" href="/main/publications.html">
+                    <div class="w-100 d-flex align-items-center justify-content-between">
+                      <div>
+                        <h6 class="dropdown-header text-dark font-weight-bolder d-flex justify-content-cente align-items-center p-0">Publications</h6>
+                        <span class="text-sm">See all publications</span>
+                      </div>
+                    </div>
+                  </a>
+                </li>
+                <li class="nav-item dropdown dropdown-hover dropdown-subitem">
+                  <a class="dropdown-item py-2 ps-3 border-radius-md" href="/main/sop.html">
+                    <div class="w-100 d-flex align-items-center justify-content-between">
+                      <div>
+                        <h6 class="dropdown-header text-dark font-weight-bolder d-flex justify-content-cente align-items-center p-0">SOP Documentation</h6>
+                        <span class="text-sm">See all SOP docs</span>
+                      </div>
+                      <img src="{% static 'assets/img/shapes/down-arrow.svg' %}" alt="down-arrow" class="arrow">
+                    </div>
+                  </a>
+                  <div class="dropdown-menu mt-0 py-3 px-2 mt-3">
+                    <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/sop-field-collection.html">
+                      Field Collection
+                    </a>
+                    <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/sop-wet-lab.html">
+                      Wet Lab
+                    </a>
+                    <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/sop-bioinformatics.html">
+                      Bioinformatics
+                    </a>
+                  </div>
+                </li>
+                <li class="nav-item dropdown dropdown-hover dropdown-subitem">
+                  <a class="dropdown-item py-2 ps-3 border-radius-md" href="/main/api.html">
                     <div class="w-100 d-flex align-items-center justify-content-between">
                       <div>
                         <h6 class="dropdown-header text-dark font-weight-bolder d-flex justify-content-cente align-items-center p-0">API Documentation</h6>
@@ -84,109 +126,48 @@
                     </a>
                   </div>
                 </li>
-                <li class="nav-item dropdown dropdown-hover dropdown-subitem">
-                  <a class="dropdown-item py-2 ps-3 border-radius-md" href="/">
-                    <div class="w-100 d-flex align-items-center justify-content-between">
-                      <div>
-                        <h6 class="dropdown-header text-dark font-weight-bolder d-flex justify-content-cente align-items-center p-0">Navigation</h6>
-                        <span class="text-sm">See all navigations</span>
-                      </div>
-                      <img src="{% static 'assets/img/shapes/down-arrow.svg' %}" alt="down-arrow" class="arrow">
-                    </div>
-                  </a>
-                  <div class="dropdown-menu mt-0 py-3 px-2 mt-3">
-                    <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/ui-navigation-navbars.html">
-                      Navbars
-                    </a>
-                    <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/ui-navigation-nav-tabs.html">
-                      Nav Tabs
-                    </a>
-                    <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/ui-navigation-pagination.html">
-                      Pagination
-                    </a>
-                  </div>
-                </li>
-                <li class="nav-item dropdown dropdown-hover dropdown-subitem">
-                  <a class="dropdown-item py-2 ps-3 border-radius-md" href="/">
-                    <div class="w-100 d-flex align-items-center justify-content-between">
-                      <div>
-                        <h6 class="dropdown-header text-dark font-weight-bolder d-flex justify-content-cente align-items-center p-0">Input Areas</h6>
-                        <span class="text-sm">See all input areas</span>
-                      </div>
-                      <img src="{% static 'assets/img/shapes/down-arrow.svg' %}" alt="down-arrow" class="arrow">
-                    </div>
-                  </a>
-                  <div class="dropdown-menu mt-0 py-3 px-2 mt-3">
-                    <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/ui-input-inputs.html">
-                      Inputs
-                    </a>
-                    <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/ui-input-forms.html">
-                      Forms
-                    </a>
-                  </div>
-                </li>
-                <li class="nav-item dropdown dropdown-hover dropdown-subitem">
-                  <a class="dropdown-item py-2 ps-3 border-radius-md" href="/">
-                    <div class="w-100 d-flex align-items-center justify-content-between">
-                      <div>
-                        <h6 class="dropdown-header text-dark font-weight-bolder d-flex justify-content-cente align-items-center p-0">Attention Catchers</h6>
-                        <span class="text-sm">See all examples</span>
-                      </div>
-                      <img src="{% static 'assets/img/shapes/down-arrow.svg' %}" alt="down-arrow" class="arrow">
-                    </div>
-                  </a>
-                  <div class="dropdown-menu mt-0 py-3 px-2 mt-3">
-                    <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/ui-catchers-alerts.html">
-                      Alerts
-                    </a>
-                    <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/ui-catchers-modals.html">
-                      Modals
-                    </a>
-                    <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/ui-catchers-tooltips-popovers.html">
-                      Tooltips & Popovers
-                    </a>
-                  </div>
-                </li>
-                <li class="nav-item dropdown dropdown-hover dropdown-subitem">
-                  <a class="dropdown-item py-2 ps-3 border-radius-md" href="/">
-                    <div class="w-100 d-flex align-items-center justify-content-between">
-                      <div>
-                        <h6 class="dropdown-header text-dark font-weight-bolder d-flex justify-content-cente align-items-center p-0">Elements</h6>
-                        <span class="text-sm">See all elements</span>
-                      </div>
-                      <img src="{% static 'assets/img/shapes/down-arrow.svg' %}" alt="down-arrow" class="arrow">
-                    </div>
-                  </a>
-                  <div class="dropdown-menu mt-0 py-3 px-2 mt-3">
-                    <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/ui-elements-avatars.html">
-                      Avatars
-                    </a>
-                    <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/ui-elements-badges.html">
-                      Badges
-                    </a>
-                    <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/ui-elements-breadcrumbs.html">
-                      Breadcrumbs
-                    </a>
-                    <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/ui-elements-buttons.html">
-                      Buttons
-                    </a>
-                    <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/ui-elements-dropdowns.html">
-                      Dropdowns
-                    </a>
-                    <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/ui-elements-progress-bars.html">
-                      Progress Bars
-                    </a>
-                    <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/ui-elements-toggles.html">
-                      Toggles
-                    </a>
-                    <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/ui-elements-typography.html">
-                      Typography
-                    </a>
-                  </div>
-                </li>
               </div>
               <div class="row d-lg-none">
                 <div class="col-md-12">
+                  <div class="d-flex mb-2 mt-3">
+                    <div class="icon h-10 me-3 d-flex mt-1">
+                      <i class="ni ni-badge text-gradient text-primary"></i>
+                    </div>
+                    <div class="w-100 d-flex align-items-center justify-content-between">
+                      <div>
+                        <h6 class="dropdown-header text-dark font-weight-bolder d-flex justify-content-cente align-items-center p-0">Projects</h6>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="d-flex mb-2 mt-3">
+                    <div class="icon h-10 me-3 d-flex mt-1">
+                      <i class="ni ni-notification-70 text-gradient text-primary"></i>
+                    </div>
+                    <div class="w-100 d-flex align-items-center justify-content-between">
+                      <div>
+                        <h6 class="dropdown-header text-dark font-weight-bolder d-flex justify-content-cente align-items-center p-0">Publications</h6>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="d-flex mb-2 mt-3">
+                    <div class="icon h-10 me-3 d-flex mt-1">
+                      <i class="ni ni-laptop text-gradient text-primary"></i>
+                    </div>
+                    <div class="w-100 d-flex align-items-center justify-content-between">
+                      <div>
+                        <h6 class="dropdown-header text-dark font-weight-bolder d-flex justify-content-cente align-items-center p-0">SOP Documentation</h6>
+                      </div>
+                    </div>
+                  </div>
+                  <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/sop-field-collection.html">
+                    Field Collection
+                  </a>
+                  <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/sop-wet-lab.html">
+                    Wet Lab
+                  </a>
+                  <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/sop-bioinformatics.html">
+                    Bioinformatics
+                  </a>
                   <div class="d-flex mb-2">
                     <div class="icon h-10 me-3 d-flex mt-1">
                       <i class="ni ni-single-copy-04 text-gradient text-primary"></i>
@@ -203,94 +184,6 @@
                   <a class="dropdown-item ps-3 border-radius-md mb-1" href="{% url 'schema-redoc' %}">
                     Redoc
                   </a>
-                  <div class="d-flex mb-2 mt-3">
-                    <div class="icon h-10 me-3 d-flex mt-1">
-                      <i class="ni ni-laptop text-gradient text-primary"></i>
-                    </div>
-                    <div class="w-100 d-flex align-items-center justify-content-between">
-                      <div>
-                        <h6 class="dropdown-header text-dark font-weight-bolder d-flex justify-content-cente align-items-center p-0">Navigation</h6>
-                      </div>
-                    </div>
-                  </div>
-                  <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/ui-navigation-navbars.html">
-                    Navbars
-                  </a>
-                  <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/ui-navigation-nav-tabs.html">
-                    Nav Tabs
-                  </a>
-                  <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/ui-navigation-pagination.html">
-                    Pagination
-                  </a>
-                  <div class="d-flex mb-2 mt-3">
-                    <div class="icon h-10 me-3 d-flex mt-1">
-                      <i class="ni ni-badge text-gradient text-primary"></i>
-                    </div>
-                    <div class="w-100 d-flex align-items-center justify-content-between">
-                      <div>
-                        <h6 class="dropdown-header text-dark font-weight-bolder d-flex justify-content-cente align-items-center p-0">Input Areas</h6>
-                      </div>
-                    </div>
-                  </div>
-                  <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/ui-input-inputs.html">
-                    Inputs
-                  </a>
-                  <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/ui-input-forms.html">
-                    Forms
-                  </a>
-                  <div class="d-flex mb-2 mt-3">
-                    <div class="icon h-10 me-3 d-flex mt-1">
-                      <i class="ni ni-notification-70 text-gradient text-primary"></i>
-                    </div>
-                    <div class="w-100 d-flex align-items-center justify-content-between">
-                      <div>
-                        <h6 class="dropdown-header text-dark font-weight-bolder d-flex justify-content-cente align-items-center p-0">Attention Catchers</h6>
-                      </div>
-                    </div>
-                  </div>
-                  <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/ui-catchers-alerts.html">
-                    Alerts
-                  </a>
-                  <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/ui-catchers-modals.html">
-                    Modals
-                  </a>
-                  <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/ui-catchers-tooltips-popovers.html">
-                    Tooltips & Popovers
-                  </a>
-                  <div class="d-flex mb-2 mt-3">
-                    <div class="icon h-10 me-3 d-flex mt-1">
-                      <i class="ni ni-app text-gradient text-primary"></i>
-                    </div>
-                    <div class="w-100 d-flex align-items-center justify-content-between">
-                      <div>
-                        <h6 class="dropdown-header text-dark font-weight-bolder d-flex justify-content-cente align-items-center p-0">Elements</h6>
-                      </div>
-                    </div>
-                  </div>
-                  <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/ui-elements-avatars.html">
-                    Avatars
-                  </a>
-                  <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/ui-elements-badges.html">
-                    Badges
-                  </a>
-                  <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/ui-elements-breadcrumbs.html">
-                    Breadcrumbs
-                  </a>
-                  <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/ui-elements-buttons.html">
-                    Buttons
-                  </a>
-                  <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/ui-elements-dropdowns.html">
-                    Dropdowns
-                  </a>
-                  <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/ui-elements-progress-bars.html">
-                    Progress Bars
-                  </a>
-                  <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/ui-elements-toggles.html">
-                    Toggles
-                  </a>
-                  <a class="dropdown-item ps-3 border-radius-md mb-1" href="/main/ui-elements-typography.html">
-                    Typography
-                  </a>
                 </div>
               </div>
             </ul>
@@ -304,21 +197,18 @@
             <ul class="dropdown-menu dropdown-menu-end dropdown-menu-animation dropdown-md dropdown-md-responsive mt-0 mt-lg-3 p-3 border-radius-lg" aria-labelledby="dropdownMenuDocs">
               <div class="d-none d-lg-block">
                 <ul class="list-group">
-
                   <li class="nav-item list-group-item border-0 p-0">
                     <a class="dropdown-item py-2 ps-3 border-radius-md" target="_blank" href="/main/contact-us.html">
                       <h6 class="dropdown-header text-dark font-weight-bolder d-flex justify-content-cente align-items-center p-0">Support</h6>
                       <span class="text-sm">Get support from experts</span>
                     </a>
-                  </li> 
-
+                  </li>
                   <li class="nav-item list-group-item border-0 p-0">
                     <a class="dropdown-item py-2 ps-3 border-radius-md" target="_blank" href="https://medna-metadata.readthedocs.io/en/latest/?badge=latest">
                       <h6 class="dropdown-header text-dark font-weight-bolder d-flex justify-content-cente align-items-center p-0">Getting Started - ReadTheDocs</h6>
                       <span class="text-sm">Technical documentation on deploying this application</span>
                     </a>
                   </li>
-
                 </ul>
               </div>
               <div class="row d-lg-none">
@@ -335,6 +225,7 @@
               </div>
             </ul>
           </li>
+
           {% if user.is_active and user.is_staff %}
           <li class="nav-item ms-lg-auto">
             <a class="nav-link nav-link-icon me-2" href="{% url 'admin:index' %}" target="_blank">
@@ -343,6 +234,7 @@
             </a>
           </li>
           {% endif %}
+
           <li class="nav-item my-auto ms-3 ms-lg-0">
             <a href="/dashboard/" target="_blank" class="btn btn-sm  bg-gradient-primary  mb-0 me-1 mt-2 mt-md-0">Dashboard</a>
           </li>
