updated frontend templates

--- a/frontend/templates/home/django-material-kit/projects.html
+++ b/frontend/templates/home/django-material-kit/projects.html
@@ -1,7 +1,7 @@
 {% extends "layouts/django-material-kit/base.html" %}
 {% load static %}
 
-{% block title %} Template Page {% endblock %} 
+{% block title %} Projects {% endblock %}
 
 {% block body_class %} index-page {% endblock %}
 
@@ -12,14 +12,14 @@
 
   {% include 'includes/django-material-kit/navigation-transparent.html' %}
 
-  <div class="page-header min-vh-80" style="background-image: url('https://images.unsplash.com/photo-1592870407191-67fa2b6c374e?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2490&q=80')">
+  <div class="page-header min-vh-80" style="background-image: url('https://images.unsplash.com/photo-1609599234553-1c573c30525b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2490&q=80')">
     <span class="mask bg-gradient-dark opacity-6"></span>
     <div class="container">
       <div class="row">
         <div class="col-md-8 mx-auto">
           <div class="text-center">
-            <h1 class="text-white">Your title here</h1>
-            <h3 class="text-white">Subtitle</h3>
+            <h1 class="text-white">Projects</h1>
+            <h3 class="text-white">Descriptions, field collections</h3>
           </div>
         </div>
       </div>
