updated frontend templates

--- a/frontend/templates/home/django-material-kit/index.html
+++ b/frontend/templates/home/django-material-kit/index.html
@@ -169,7 +169,7 @@
             <div class="col-lg-6">
               <span class="badge bg-primary mb-3">Multi-Institutional</span>
               <h2 class="text-dark mb-0">Growing Partnerships</h2>
-              <p class="lead">The strategic plan partnerships have facilitated the growth and inclusion of federal, state,
+              <p class="lead">The strategic plan partnerships have facilitated growth and inclusion of federal, state,
                 public, and private institutions, communities, and individuals. </p>
             </div>
           </div>
