updated frontend templates

--- a/frontend/templates/home/django-material-kit/projects.html
+++ b/frontend/templates/home/django-material-kit/projects.html
@@ -19,7 +19,7 @@
         <div class="col-md-8 mx-auto">
           <div class="text-center">
             <h1 class="text-white">Projects</h1>
-            <h3 class="text-white">Descriptions, field collections</h3>
+            <p class="lead mb-4 text-white opacity-8">Descriptions, field collections</p>
           </div>
         </div>
       </div>
