--- a/frontend/templates/home/django-material-kit/publications.html
+++ b/frontend/templates/home/django-material-kit/publications.html
@@ -19,7 +19,7 @@
         <div class="col-md-8 mx-auto">
           <div class="text-center">
             <h1 class="text-white">Publications</h1>
-            <h3 class="text-white">Peer-reviewed content</h3>
+            <p class="lead mb-4 text-white opacity-8">Peer-reviewed content</p>
           </div>
         </div>
       </div>
