updated frontend templates

--- a/frontend/templates/home/django-material-dashboard/sign-in.html
+++ b/frontend/templates/home/django-material-dashboard/sign-in.html
@@ -22,18 +22,18 @@
                 <h4 class="text-white font-weight-bolder text-center mt-2 mb-0">Sign in</h4>
                 <div class="row mt-3">
                   <div class="col-2 text-center ms-auto">
-                    <a class="btn btn-link px-3" href="javascript:;">
+                    <a class="btn btn-link px-3" href="https://www.facebook.com/MaineEPSCoR/">
                       <i class="fa fa-facebook text-white text-lg"></i>
                     </a>
                   </div>
                   <div class="col-2 text-center px-1">
-                    <a class="btn btn-link px-3" href="javascript:;">
+                    <a class="btn btn-link px-3" href="https://github.com/maine-edna/medna-metadata">
                       <i class="fa fa-github text-white text-lg"></i>
                     </a>
                   </div>
                   <div class="col-2 text-center me-auto">
-                    <a class="btn btn-link px-3" href="javascript:;">
-                      <i class="fa fa-google text-white text-lg"></i>
+                    <a class="btn btn-link px-3" href="https://umaine.edu/edna/">
+                      <i class="fas fa-home text-white text-lg"></i>
                     </a>
                   </div>
                 </div>
