updated frontend templates

--- a/frontend/templates/home/django-material-dashboard/sign-in.html
+++ b/frontend/templates/home/django-material-dashboard/sign-in.html
@@ -74,4 +74,6 @@
 {% endblock content %}
 
 <!-- Specific Page JS goes HERE  -->
-{% block javascripts %}{% endblock javascripts %}
+{% block javascripts %}
+{% include 'includes/django-material-kit/scripts.html' %}
+{% endblock javascripts %}
