updating project template in frontend

--- a/frontend/templates/home/django-material-kit/projects.html
+++ b/frontend/templates/home/django-material-kit/projects.html
@@ -29,6 +29,25 @@
     <div class="container">
       <div class="section text-center">
         <h2 class="title">Content coming soon...</h2>
+
+        <!-- -------- START Grids -------- -->
+        <h3>h2. Bootstrap heading</h3>
+        <div class="row">
+          <div class="col">
+            <p class="lead">
+              Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Duis mollis, est non commodo luctus.
+            </p>
+          </div>
+          <div class="col">
+            <p class="lead">
+              Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Duis mollis, est non commodo luctus.
+            </p>
+          </div>
+          <div class="w-100"></div>
+        </div>
+
+        <!-- -------- END Grids -------- -->
+
       </div>
     </div>
   </div>
