added metadata-standards page

--- a/frontend/templates/includes/django-material-kit/navigation-transparent.html
+++ b/frontend/templates/includes/django-material-kit/navigation-transparent.html
@@ -91,6 +91,16 @@
                     </a>
                   </li>
                   <li class="nav-item dropdown dropdown-hover dropdown-subitem">
+                    <a class="dropdown-item py-2 ps-3 border-radius-md" href="/main/publications.html">
+                      <div class="w-100 d-flex align-items-center justify-content-between">
+                        <div>
+                          <h6 class="dropdown-header text-dark font-weight-bolder d-flex justify-content-cente align-items-center p-0">Standards</h6>
+                          <span class="text-sm">See metadata standards</span>
+                        </div>
+                      </div>
+                    </a>
+                  </li>
+                  <li class="nav-item dropdown dropdown-hover dropdown-subitem">
                     <a class="dropdown-item py-2 ps-3 border-radius-md" href="/main/sop.html">
                       <div class="w-100 d-flex align-items-center justify-content-between">
                         <div>
@@ -151,6 +161,16 @@
                       <div class="w-100 d-flex align-items-center justify-content-between">
                         <div>
                           <h6 class="dropdown-header text-dark font-weight-bolder d-flex justify-content-cente align-items-center p-0">Publications</h6>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="d-flex mb-2 mt-3">
+                      <div class="icon h-10 me-3 d-flex mt-1">
+                        <i class="ni ni-notification-70 text-gradient text-primary"></i>
+                      </div>
+                      <div class="w-100 d-flex align-items-center justify-content-between">
+                        <div>
+                          <h6 class="dropdown-header text-dark font-weight-bolder d-flex justify-content-cente align-items-center p-0">Standards</h6>
                         </div>
                       </div>
                     </div>
